Rotate around selection changes bezier curve handle type #46161

Closed
opened 2015-09-19 06:56:10 +02:00 by Duarte Farrajota Ramos · 8 comments

System Information
Windows 7 64bits Nvidia GTX 580

Blender Version
At least since 2.74, possibly earlier
Worked: (optional)

Short description of error
When the interface option 'Rotate around selection' is active rotating view in curve edit mode changes handle types from vector to free.

Exact steps for others to reproduce the error

  • Default scene
  • [Shift+A] Add Bezier curve
  • Change viewport into Wireframe mode
  • Add some extrusion value (just for visual feedback)
  • Curve extrusion should be segmented because of curvature
  • Tab into edit mode
  • Select only the two center handles
  • Press - change all handle types to 'Vector'
  • Immediately after, without deselecting vertex rotate view with [middle-mouse button]
  • Exit edit mode
  • Curve should remain un-segmented
  • Now go to [CTRL+Alt+U] User Preferences>Interface>and activate option 'Rotate Around Selection'
  • Repeat steps 6 through 10
  • You will notice immediately after orbiting handle type changes from vector to free

If you tab out of edit mode you will notice curve is segmented again

Finally got to the bottom of this, I has been killing me, now I know I am not crazy.
This was reported some time ago on #44790 to @mont29 but I was unable to reproduce this reliably as didn't realize back then what was triggering the problem, you can see some animated gifs and example file there.

CurveHandles00.gif CurveHandles01.gif

**System Information** Windows 7 64bits Nvidia GTX 580 **Blender Version** At least since 2.74, possibly earlier Worked: (optional) **Short description of error** When the interface option 'Rotate around selection' is active rotating view in curve edit mode changes handle types from vector to free. **Exact steps for others to reproduce the error** - Default scene - [Shift+A] Add Bezier curve - Change viewport into Wireframe mode - Add some extrusion value (just for visual feedback) - Curve extrusion should be segmented because of curvature - Tab into edit mode - Select only the two center handles - Press - [x] change all handle types to 'Vector' - Immediately after, without deselecting vertex rotate view with [middle-mouse button] - Exit edit mode - Curve should remain un-segmented - Now go to [CTRL+Alt+U] User Preferences>Interface>and activate option 'Rotate Around Selection' - Repeat steps 6 through 10 - You will notice immediately after orbiting handle type changes from vector to free # If you tab out of edit mode you will notice curve is segmented again Finally got to the bottom of this, I has been killing me, now I know I am not crazy. This was reported some time ago on #44790 to @mont29 but I was unable to reproduce this reliably as didn't realize back then what was triggering the problem, you can see some animated gifs and example file there. ![CurveHandles00.gif](https://archive.blender.org/developer/F178361/CurveHandles00.gif) ![CurveHandles01.gif](https://archive.blender.org/developer/F178362/CurveHandles01.gif)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscribers: @DuarteRamos, @mont29

Added subscribers: @DuarteRamos, @mont29

Forgot to mention I was experiencing this in 2.75 and retested it and it's still present in 2.76 rc1 as well.

Forgot to mention I was experiencing this in 2.75 and retested it and it's still present in 2.76 rc1 as well.

Added subscriber: @zeauro

Added subscriber: @zeauro

ubuntu 14.04 64 bits

I confirm I have same bug with master hash:de7b757

ubuntu 14.04 64 bits I confirm I have same bug with master hash:de7b757

Can confirm, rotating with said 'Rotate Around Selection' preference enabled change any selected 'Vector' handle to free type…

Can confirm, rotating with said 'Rotate Around Selection' preference enabled change any selected 'Vector' handle to free type…
Bastien Montagne self-assigned this 2015-09-19 10:44:19 +02:00

This issue was referenced by cfc109eb92

This issue was referenced by cfc109eb928951b402eb759350a7588290e614b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46161
No description provided.